--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,3 +2,21 @@ body {
     padding: 0;
     margin: 0;
 }
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    margin: 0;
+    padding: 0;
+}
