--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -1,5 +1,5 @@
-@import "./theme.scss";
-@import "./utils.scss";
+@import "../theme.scss";
+@import "../utils.scss";
 
 .nav {
     @include flexItemsCenter;
@@ -11,6 +11,8 @@
     font-weight: 500;
     position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 1;
 
     .mlogo {
         display: none;
