--- a/styles/components/cardContent.module.scss
+++ b/styles/components/cardContent.module.scss
@@ -5,12 +5,18 @@
     margin: 10vw 2vw;
     gap: 4vw;
     margin-bottom: 0vw;
+
+    &:nth-child(even) {
+        flex-direction: row-reverse;
+    }
+
     .content {
 
         // width: 40vw;
         .heading {
             display: flex;
             gap: 2vw;
+
             h1 {
                 font-size: 8vw;
                 font-weight: 500;
@@ -19,7 +25,7 @@
                 -webkit-text-stroke: .05vw;
                 color: $dark;
             }
-            
+
             h2 {
                 letter-spacing: .5vw;
                 font-size: 4vw;
