--- a/styles/components/heading.module.scss
+++ b/styles/components/heading.module.scss
@@ -2,14 +2,22 @@
 
 .heading {
     display: flex;
+    gap: 3vw;
 
     h1 {
-        font-size: 2.5vw;
-        font-weight: 600;
+        font-size: 3.2vw;
+        font-weight: 500;
+        font-family: 'Visby Bold';
         color: $primary;
+        margin: 0;
+        min-width: max-content;
     }
 
     hr {
-        border: 1px solid rgb(126, 126, 126);
+        width: 100%;
+        height: 0.1vw;
+        background-color: rgba(0, 0, 0, 0.400);
+        border: none;
+        align-self: flex-end;
     }
 }
