--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -101,3 +101,84 @@
         }
     }
 }
+
+.vision_mission {
+    padding: 0 10vw;
+
+    .content {
+        display: flex;
+        align-items: center;
+
+        &:nth-child(odd) {
+            flex-direction: row-reverse;
+
+            h2 {
+                transform: rotate(90deg);
+                margin: 0 -6vw 0 0vw;
+
+            }
+        }
+
+        img {
+            width: max-content;
+            height: 25vw;
+            margin: 0;
+            // background-color: #87BE42;
+        }
+
+        h2 {
+            font-size: 2.4vw;
+            letter-spacing: .3vw;
+            font-weight: 500;
+            font-family: 'Visby Bold';
+            margin: 0;
+            transform: rotate(-90deg);
+            align-self: center;
+            display: inline;
+            min-width: max-content;
+            margin: 0 0vw 0 -6vw;
+            // background-color: #87BE42;
+        }
+
+        ul {
+            margin: 0;
+            // background-color: #C2D950;
+
+            li {
+                margin: 0;
+                margin-bottom: 2vw;
+                font-size: 2vw;
+                font-weight: 500;
+                font-family: 'Visby Regular';
+                position: relative;
+
+                &::before {
+                    content: " ";
+                    background-color: $primary;
+                    // color: $primary;
+                    position: absolute;
+                    display: inline-block;
+                    width: 1.5vw;
+                    height: 1.5vw;
+                    border-radius: 50%;
+                    margin-top: .5vw;
+                    margin-left: -2vw;
+
+                }
+            }
+        }
+    }
+}
+
+.gallery {
+    margin-top: 5vw;
+    padding: 0 10vw;
+
+    .content {
+        img {
+            width: 20vw;
+            height: max-content;
+            margin: 0;
+        }
+    }
+}
