--- a/styles/components/contentLayouts.module.scss
+++ b/styles/components/contentLayouts.module.scss
@@ -16,6 +16,9 @@
         p {
             margin: 0;
             font-size: 2vw;
+            letter-spacing: .15vw;
+
+
         }
 
         img {
@@ -27,6 +30,8 @@
     .Bottom {
         p {
             font-size: 2vw;
+            letter-spacing: .15vw;
+
         }
     }
 }
@@ -48,6 +53,8 @@
 
     p {
         font-size: 2vw;
+        letter-spacing: .15vw;
+
     }
 
 }
@@ -63,6 +70,8 @@
 
     p {
         font-size: 2vw;
+        letter-spacing: .15vw;
+
     }
 
 }
@@ -83,5 +92,6 @@
 
     p {
         font-size: 2vw;
+        letter-spacing: .15vw;
     }
 }
