--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -182,6 +182,30 @@
             margin-bottom: 2vw;
         }
 
+        .scroll {
+            display: flex;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            gap: 2vw;
+            margin-bottom: 2vw;
+            margin-right: -10vw;
+
+            // override padding from carousel
+            &::-webkit-scrollbar {
+                width: 0px;
+                background: transparent;
+                /* make scrollbar transparent */
+            }
+
+
+            img {
+                width: max-content;
+                height: 30vw;
+                border-radius: 1vw;
+                object-fit: cover;
+            }
+        }
+
         .carousel {
             display: flex;
             justify-content: space-between;
@@ -411,6 +435,141 @@
                 font-size: 3vw;
                 font-family: 'Visby Medium';
                 letter-spacing: .2vw;
+            }
+
+        }
+
+
+
+    }
+
+}
+
+.cutomers_gallery {
+    padding: 0 10vw;
+    margin: 10vw 0;
+
+    .carousel {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        img {
+            width: max-content;
+            height: max-content;
+
+        }
+    }
+}
+
+.awards {
+    position: relative;
+    height: 30vw;
+    width: 100%;
+
+    .bg_plane {
+        position: absolute;
+        background-color: #00BDF8;
+        width: 50%;
+        height: 100%;
+        right: 0;
+        z-index: -1;
+        background: linear-gradient(216.05deg, #00BDF8 0%, #87BE42 61.29%, #C2D950 100%);
+        filter: blur(30.5px);
+    }
+
+    .content {
+        display: flex;
+
+
+        .left {
+            width: 50%;
+
+            .scrollable {
+                display: flex;
+                overflow-x: scroll;
+                overflow-y: hidden;
+                gap: 2vw;
+                margin-left: -10vw;
+
+                // override padding from carousel
+                &::-webkit-scrollbar {
+                    width: 0px;
+                    background: transparent;
+                    /* make scrollbar transparent */
+                }
+
+                .award_box {
+                    position: relative;
+                    height: 20vw;
+                    width: 20vw;
+                    background-color: $dark;
+                    color: $light;
+                    border-radius: 1.5vw;
+                    display: flex;
+                    justify-content: center;
+
+                    align-items: center;
+
+                    h4 {
+                        font-size: 1.5vw;
+                        font-family: 'Visby Thin';
+                        margin: 0;
+                        width: 10vw;
+                        text-align: center;
+
+                        span {
+                            font-size: 2vw;
+                            font-family: 'Visby Bold';
+                            margin-right: 2vw;
+                        }
+
+                    }
+
+                    img {
+                        position: absolute;
+                        width: 12vw;
+                        height: max-content;
+                        bottom: 3vw;
+                    }
+                }
+
+            }
+
+        }
+
+        .right {
+            width: 50%;
+
+            display: flex;
+            flex-direction: column;
+            padding-left: 10vw;
+
+            h2 {
+                font-size: 3vw;
+                font-family: 'Visby Bold';
+                margin: 0;
+                width: 30vw;
+                margin-bottom: 1vw;
+
+            }
+
+            h3 {
+                font-size: 2vw;
+                font-family: 'Visby Regular';
+                margin: 0;
+                width: 30vw;
+                margin-bottom: 1.5vw;
+            }
+
+
+
+            p {
+                font-size: 1.5vw;
+                font-family: 'Visby Regular';
+                margin: 0;
+                width: 22vw;
+
             }
         }
     }
