--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -447,7 +447,7 @@
 
 .cutomers_gallery {
     padding: 0 10vw;
-    margin: 10vw 0;
+    margin: 10vw 0 5vw 0;
 
     .carousel {
         display: flex;
@@ -466,6 +466,9 @@
     position: relative;
     height: 30vw;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .bg_plane {
         position: absolute;
@@ -480,10 +483,10 @@
 
     .content {
         display: flex;
-
+        justify-content: center;
 
         .left {
-            width: 50%;
+            width: 60%;
 
             .scrollable {
                 display: flex;
@@ -500,6 +503,26 @@
                 }
 
                 .award_box {
+
+                    &:nth-child(2) {
+                        display: flex;
+                        flex-direction: column;
+
+
+                        h4 {
+                            font-size: 1.5vw;
+                            font-family: 'Visby Thin';
+                            margin: 0;
+
+
+                            span {
+                                font-size: 2vw;
+                                font-family: 'Visby Bold';
+                            }
+
+                        }
+                    }
+
                     position: relative;
                     height: 20vw;
                     width: 20vw;
@@ -539,11 +562,11 @@
         }
 
         .right {
-            width: 50%;
+            width: 40%;
 
             display: flex;
             flex-direction: column;
-            padding-left: 10vw;
+            padding-left: 5vw;
 
             h2 {
                 font-size: 3vw;
