--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -39,6 +39,8 @@
         color: $dark;
         margin-top: 1vw;
         font-family: "Visby Regular";
+        letter-spacing: .1vw;
+        line-height: 2.2vw;
     }
 
     .section1 {
@@ -56,36 +58,48 @@
         }
 
         img {
-            width: 20vw;
-            height: max-content;
+            width: max-content;
+            height: 30vw;
         }
     }
 
     .section2 {
         margin-top: 10vw;
         display: flex;
-        gap: 10vw;
+        gap: 20vw;
 
         .img_holder {
             position: relative;
-            width: 50vw;
+            width: 100vw;
 
             img {
                 position: absolute;
-                width: 20vw;
-                height: max-content;
+                width: max-content;
+                height: 25vw;
 
                 &:nth-child(2) {
-                    top: 10;
-                    left: 0;
+                    height: 30vw;
+                    width: max-content;
+                    top: 9.5vw;
+                    left: 8vw;
                 }
             }
         }
     }
 
     .section3 {
-        margin-top: 10vw;
+        margin-top: 15vw;
 
+        h4 {
+            margin: 0;
+            margin-bottom: 1vw;
+        }
+
+        h1 {
+            margin: 0;
+            margin-bottom: 5vw;
+            width: 50vw;
+        }
 
         .content {
             display: grid;
@@ -97,21 +111,27 @@
             .LinkedinImage {
                 position: relative;
                 width: 35vw;
-
+                border-radius: 2vw;
                 height: max-content;
+                box-shadow: 0 1vw 1vw 0 rgba(0, 0, 0, 0.2);
 
                 img {
                     width: 100%;
                     height: 100%;
+                    border-radius: 2vw;
+
                 }
 
                 // even childern
                 &:nth-child(even) {
-                    margin-top: 5vw;
+                    margin-top: 10vw;
+                    border-radius: 2vw;
+
                 }
 
                 .NameLink {
                     position: absolute;
+                    border-radius: 2vw;
                     top: 0;
                     left: 0;
                     width: 100%;
@@ -122,19 +142,42 @@
                     align-items: center;
                     font-size: 1.5vw;
                     // gradient background
-                    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 1) 100%);
+                    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 60%, rgba(255, 255, 255, .4) 75%, rgba(129, 129, 129, 0.5) 85%, rgb(0, 0, 0) 100%);
+
+
+
 
                     h3 {
                         font-size: 2.5vw;
                         margin: 0;
-                        color: $dark;
+                        color: $light;
+                        font-family: "Visby SemiBold";
+                        position: absolute;
+                        bottom: 5vw;
                     }
 
                     a {
+                        display: flex;
                         font-size: 1.5vw;
                         margin: 0;
-                        color: blue;
+                        color: rgb(24, 119, 242);
                         text-decoration: underline;
+                        position: absolute;
+                        bottom: 2.5vw;
+                        font-family: "Visby Medium Italic";
+
+                        span {
+                            width: 1.5vw;
+                            height: max-content;
+
+                            img {
+                                border-radius: none;
+                                width: 100%;
+                                height: 100%;
+
+                            }
+                        }
+
                     }
                 }
             }
