--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -8,8 +8,9 @@
     background-color: $dark;
     height: 3.5vw;
     color: $light;
-    font-weight: 500;
     position: fixed;
+    font-family: "Visby semibold";
+    letter-spacing: .1vw;
     width: 100%;
     top: 0;
     z-index: 1;
