--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -2,7 +2,50 @@
 
 .langingPage {
     background: $dark;
-    min-height: 100vw;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+    .scroll_down {
+        position: absolute;
+        bottom: 5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        img {
+            padding-bottom: 1.5vw;
+            width: 2vw;
+            height: max-content;
+            animation: scroll 1s ease-in-out infinite;
+        }
+
+        p {
+            color: $light;
+            font-size: 1.2vw;
+            font-family: 'Visby regular';
+            letter-spacing: 0.2vw;
+            margin: 0;
+        }
+
+
+        @keyframes scroll {
+            0% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(1vw);
+            }
+
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+    }
 }
 
 .intro {
