--- a/styles/components/blogCarousel.module.scss
+++ b/styles/components/blogCarousel.module.scss
@@ -1,3 +1,5 @@
+@import '../theme.scss';
+
 .blogCarousel {
     padding-left: 10vw;
     margin: 5vw 0vw 10vw 0vw;
@@ -7,12 +9,54 @@
         gap: 2vw;
         overflow-x: scroll;
 
+        // scrollbar
+        &::-webkit-scrollbar {
+            height: 0.5vw;
+            &-track {
+                background: transparent;
+            }
+            &-thumb {
+                background: $primary;
+                border-radius: 1vw;
+            }
+
+            &-button {
+                display: none;
+            }
+        }
+
+
         .card {
-            min-width: 40vw;
-            height: max-content;
+            margin: 1vw;
+            margin-top: 3vw;
+            min-width: 30vw;
+            height: 15vw;
             padding: 2.5vw;
             border-radius: 2vw;
-            box-shadow: 0vw 0vw 2vw 0vw rgba(0, 0, 0, 0.2);
+            box-shadow: 0vw 0vw 1vw 0vw rgba(0, 0, 0, 0.2);
+            
+            h5{
+                font-size: 1vw;
+                font-family: 'Visby Regular';
+                color: rgb(119, 119, 119);
+                margin: 0;
+            }
+
+            h3{
+                font-size: 1.8vw;
+                font-family: 'Visby Bold';
+                color: $dark;
+                margin: 0;
+                margin-top: .5vw;
+            }
+            
+            p{
+                font-size: 1.3vw;
+                font-family: 'Visby Regular';
+                color: $dark;
+                margin: 0;
+                margin-top: 1vw;
+            }
         }
     }
 }
