--- a/styles/components/heading.module.scss
+++ b/styles/components/heading.module.scss
@@ -5,7 +5,7 @@
     gap: 3vw;
 
     h1 {
-        font-size: 3.2vw;
+        font-size: $heading1;
         font-weight: 500;
         font-family: 'Visby Bold';
         color: $primary;
