--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -7,6 +7,11 @@ $secondary:#A0A0A0;
 // FONTS
 $fontFamily: 'Roboto', sans-serif;
 
+// FONT SIZES
+$heading1: 3vw;
+$text: 1.5vw;
+$button: 2vw;
+
 // DEVICE SIZES
 $mobile: 600px;
 $tablet: 900px;
