--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -12,8 +12,11 @@ $heading1: 3vw;
 $text: 1.5vw;
 $button: 2vw;
 
+$mobile_heading1: 4.5vw;
+$mobile_text: 2vw;
+$mobile_button: 3vw;
 // DEVICE SIZES
-$mobile: 600px;
+$mobile: 768px;
 $tablet: 900px;
 $desktop: 1024px;
 
