--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -101,6 +101,9 @@
                 h3 {
                     color: $primary;
                     cursor: pointer;
+                    font-family: 'Visby SemiBold';
+                    font-size: 1.5vw;
+                    letter-spacing: 0.15vw;
 
                     img {
                         width: 1vw;
@@ -115,6 +118,13 @@
                             transition: all 0.5s ease-in-out;
                         }
                     }
+                }
+
+                p {
+                    font-family: 'Visby Regular';
+                    font-size: 1.2vw;
+                    letter-spacing: 0.15vw;
+                    margin: 0;
                 }
 
             }
@@ -683,8 +693,10 @@
         p {
             font-size: 1.5vw;
             font-family: 'Visby Regular';
+            letter-spacing: .1vw;
             margin: 0;
             width: 22vw;
+            color: $light;
 
         }
     }
@@ -766,6 +778,720 @@
                     width: 8vw;
                     cursor: pointer;
                     height: max-content;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $mobile) {
+
+    .langingPage {
+        background: $dark;
+        height: 30vh;
+        position: relative;
+        display: flex;
+        justify-content: center;
+
+        .scroll_down {
+            display: none;
+
+        }
+    }
+
+    .intro {
+        position: relative;
+        min-height: 70vh;
+        overflow-x: hidden;
+        overflow-y: hidden;
+
+        .bgRectangle {
+            position: absolute;
+            top: 30vw;
+            left: 20vw;
+            z-index: -1;
+            width: 60vw;
+            height: 70vw;
+            background: $primary;
+            background: linear-gradient(216.05deg, #00BDF8 0%, #87BE42 61.29%, #C2D950 100%);
+            transform: rotate(180deg);
+            filter: blur(1vw);
+        }
+
+
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            margin: 1vw 0vw;
+
+
+
+            .brand {
+                position: relative;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 1vw;
+
+                &:nth-child(1) {
+                    margin: 5vw 0vw;
+                    margin-left: 5vw;
+                }
+
+                &:nth-child(2) {
+                    margin-top: 20vw;
+                    margin-left: 25vw;
+                }
+
+                img {
+                    width: 70vw;
+                    height: max-content;
+                }
+
+                .brandCard {
+                    padding: 2vw;
+                    position: absolute;
+                    border-radius: 3vw;
+                    top: 33vw;
+                    width: 60vw;
+                    background: $dark;
+                    color: $light;
+
+                    h3 {
+                        color: $primary;
+                        cursor: pointer;
+                        font-family: 'Visby SemiBold';
+                        font-size: 2.8vw;
+                        letter-spacing: 0.25vw;
+
+                        img {
+                            width: 2.3vw;
+                            height: max-content;
+                        }
+
+
+                    }
+
+                    p {
+                        font-family: 'Visby Regular';
+                        font-size: 2.6vw;
+                        letter-spacing: 0.25vw;
+                        margin: 0;
+                    }
+
+                }
+
+
+            }
+
+            .packaging {
+                position: relative;
+
+
+            }
+        }
+    }
+
+    .vision_mission {
+        padding: 0 10vw;
+
+        .content {
+            display: flex;
+            align-items: center;
+
+            &:nth-child(odd) {
+                flex-direction: row-reverse;
+
+                h2 {
+                    transform: rotate(90deg);
+                    margin: 0 -6vw 0 0vw;
+
+                }
+            }
+
+            img {
+                width: max-content;
+                height: 30vw;
+                margin: 0;
+                // background-color: #87BE42;
+            }
+
+            h2 {
+                font-size: 3vw;
+                letter-spacing: .3vw;
+                font-weight: 500;
+                font-family: 'Visby Bold';
+                margin: 0;
+                transform: rotate(-90deg);
+                align-self: center;
+                display: inline;
+                min-width: max-content;
+                margin: 0 0vw 0 -6vw;
+                // background-color: #87BE42;
+            }
+
+            ul {
+                margin: 0;
+                // background-color: #C2D950;
+
+                li {
+                    margin: 0;
+                    margin-bottom: 2vw;
+                    font-size: $mobile_text;
+                    font-family: 'Visby Regular';
+                    letter-spacing: .1vw;
+                    position: relative;
+
+                    &::before {
+                        content: " ";
+                        background-color: $primary;
+                        // color: $primary;
+                        position: absolute;
+                        display: inline-block;
+                        width: 1.5vw;
+                        height: 1.5vw;
+                        border-radius: 50%;
+                        margin-top: .5vw;
+                        margin-left: -2vw;
+
+                    }
+                }
+            }
+        }
+    }
+
+    .gallery {
+        margin-top: 5vw;
+        padding: 0 10vw;
+
+        .content {
+            h3 {
+                font-size: $mobile_text;
+                font-weight: 500;
+                font-family: 'Visby Regular';
+                margin-bottom: 2vw;
+            }
+
+            .scroll {
+                display: flex;
+                overflow-x: scroll;
+                overflow-y: hidden;
+                gap: 2vw;
+                margin-bottom: 2vw;
+                margin-right: -10vw;
+
+
+                // design scrollbar
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
+
+                img {
+                    width: max-content;
+                    height: 35vw;
+                    border-radius: 1vw;
+                    object-fit: cover;
+                }
+            }
+
+            .carousel {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                img {
+                    width: max-content;
+                    height: 28vw;
+                }
+            }
+
+            .all_services_button {
+                display: flex;
+                margin: 5vw 0;
+
+
+                hr {
+                    width: 30%;
+                    height: 0.1vw;
+                    background-color: rgba(0, 0, 0, 0.400);
+                    border: none;
+                    align-self: center
+                }
+
+                a {
+                    background-color: $primary;
+                    color: $light;
+                    font-size: $mobile_button;
+                    font-family: 'Visby Bold';
+                    padding: 1vw 2vw;
+                    border-radius: 2.5vw;
+                    // drop shadow
+                    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+
+
+
+                }
+            }
+
+
+        }
+    }
+
+    .services {
+        padding: 0 10vw;
+        margin-top: 5vw;
+
+        .component {
+            &:nth-child(odd) {
+                .content {
+                    flex-direction: row-reverse;
+
+                    h2 {
+                        color: $primary;
+                    }
+                }
+            }
+
+            .content {
+                display: flex;
+                align-items: center;
+                gap: 5vw;
+                margin-bottom: 4vw;
+                margin-top: 2vw;
+
+                p {
+                    font-size: $mobile_text;
+                    font-family: 'Visby Regular';
+                    line-height: 2.5vw;
+                    letter-spacing: .1vw;
+                }
+
+                h2 {
+                    font-size: 3vw;
+                    font-family: 'Visby Bold';
+                    cursor: pointer;
+
+                    img {
+                        margin: 0 1vw;
+                        width: 1.5vw;
+                        height: max-content;
+                        transition: all 0.5s ease-in-out;
+
+                    }
+
+                }
+
+                img {
+                    width: 35vw;
+                    height: max-content;
+                    margin: 0;
+                }
+
+                ul {
+                    cursor: pointer;
+
+                    li {
+                        font-size: $mobile_text;
+                        color: $dark;
+                        font-family: 'Visby Bold';
+                        text-decoration: underline;
+                        line-height: 3vw;
+                        transition: all 0.3s ease-in-out;
+
+
+                    }
+
+                }
+
+                .all_services {
+                    background-color: #87BE42;
+                }
+            }
+
+            .all_services {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 2vw;
+
+                margin: 5vw 0;
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    border-radius: 1vw;
+                    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+
+                    h2 {
+                        font-size: $mobile_text;
+                        font-family: 'Visby Bold';
+
+                        img {
+                            margin: 0 1vw;
+                            width: 2vw;
+                            height: max-content;
+                            transition: all 0.3s ease-in-out;
+
+                        }
+                    }
+
+
+                }
+            }
+
+            .all_services_button {
+                display: flex;
+                margin: 5vw 0;
+
+
+                hr {
+                    width: 30%;
+                    height: 0.1vw;
+                    background-color: rgba(0, 0, 0, 0.400);
+                    border: none;
+                    align-self: center
+                }
+
+                a {
+                    background-color: $primary;
+                    color: $light;
+                    font-size: $mobile_button;
+                    font-family: 'Visby Bold';
+                    padding: 1vw 2vw;
+                    border-radius: 2.5vw;
+                    // drop shadow
+                    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+
+                    &:hover {
+
+                        background-color: $light;
+                        color: $primary;
+                        box-shadow: 0px 4px 8px $primary;
+                        transition: all 0.5s ease-in-out;
+
+                    }
+
+                }
+
+
+            }
+        }
+    }
+
+    .customers {
+        background-color: $dark;
+        color: $light;
+        padding: 0 10vw;
+
+        .content {
+            display: flex;
+            gap: 5vw;
+
+            hr {
+                width: .1vw;
+                height: 30vw;
+                background-color: rgba(255, 255, 255, 0.400);
+                border: none;
+                align-self: center
+            }
+
+            .left {
+                width: 50%;
+
+                h2 {
+                    font-size: 2.5vw;
+                    letter-spacing: .1vw;
+                    font-family: 'Visby Thin';
+                    margin-bottom: 3vw;
+                    width: 30vw;
+                    line-height: 3vw;
+                    line-height: 3vw;
+                }
+
+                hr {
+                    width: 100%;
+                    height: 0.1vw;
+                    background-color: rgba(255, 255, 255, 0.400);
+                    border: none;
+                    align-self: center
+                }
+
+                p {
+                    font-size: 1.5vw;
+                    font-family: 'Visby Thin';
+                    line-height: 2.5vw;
+                    letter-spacing: .2vw;
+
+                }
+
+                h4 {
+                    font-size: 1.3vw;
+                    font-family: 'Visby Thin';
+                    line-height: 2.5vw;
+                    letter-spacing: .2vw;
+
+                    span {
+                        font-size: 1.5vw;
+                        font-family: 'Visby Bold';
+                        margin-right: 2vw;
+                    }
+                }
+
+                img {
+                    width: 15vw;
+                    height: max-content;
+                }
+            }
+
+            .right {
+                width: 50%;
+                display: flex;
+                align-items: center;
+                text-align: center;
+
+                h1 {
+                    font-size: 3.5vw;
+                    font-family: 'Visby Regular';
+                    letter-spacing: .2vw;
+                    line-height: 5vw;
+                }
+
+            }
+
+
+
+        }
+
+    }
+
+    .cutomers_gallery {
+        padding: 0 10vw;
+        margin: 10vw 0 5vw 0;
+
+        .carousel {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+
+
+
+            img {
+                width: 15vw;
+                height: max-content;
+
+                &:nth-child(3n) {
+                    img {
+                        width: 50vw;
+                        height: max-content;
+                    }
+                }
+            }
+        }
+    }
+
+    .awards {
+        position: relative;
+        height: 30vw;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 15vw;
+
+        .bg_plane {
+            position: absolute;
+            background-color: #00BDF8;
+            width: 50%;
+            height: 100%;
+            right: 0;
+            z-index: -1;
+            background: linear-gradient(216.05deg, #00BDF8 0%, #87BE42 61.29%, #C2D950 100%);
+            filter: blur(7.86706px);
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+
+            .left {
+                width: 60%;
+                display: flex;
+                gap: 2vw;
+                margin-left: -10vw;
+
+
+                .award_box {
+
+
+                    position: relative;
+                    height: 25vw;
+                    min-width: 25vw;
+                    background-color: $dark;
+                    color: $light;
+                    border-radius: 1.5vw;
+                    display: flex;
+                    justify-content: center;
+
+                    align-items: flex-start;
+
+                    &:nth-child(2) {
+                        h4 {
+
+                            padding-top: 5.5vw;
+                        }
+                    }
+
+                    &:nth-child(3) {
+                        h4 {
+
+                            padding-top: 5vw;
+                        }
+                    }
+
+                    h4 {
+                        font-size: 2vw;
+                        font-family: 'Visby Thin';
+                        margin: 0;
+                        width: 15vw;
+                        text-align: center;
+
+                        span {
+                            font-size: 2.5vw;
+                            font-family: 'Visby SemiBold';
+                        }
+
+                    }
+
+                    img {
+                        position: absolute;
+                        width: 15vw;
+                        height: max-content;
+                        bottom: 3vw;
+                    }
+                }
+
+            }
+
+        }
+
+        .right {
+            width: 40%;
+
+            display: flex;
+            flex-direction: column;
+            padding-left: 15vw;
+
+            h2 {
+                font-size: 3.2vw;
+                font-family: 'Visby Bold';
+                margin: 0;
+                width: 30vw;
+                margin-bottom: 1vw;
+
+            }
+
+            h3 {
+                font-size: 2.2vw;
+                font-family: 'Visby Regular';
+                margin: 0;
+                width: 30vw;
+                margin-bottom: 1.5vw;
+            }
+
+
+
+            p {
+                font-size: 1.7vw;
+                font-family: 'Visby Regular';
+                letter-spacing: .2vw;
+                margin: 0;
+                width: 25vw;
+                color: $light;
+
+            }
+        }
+    }
+
+    .map {
+        padding: 5vw 10vw;
+
+        img {
+            width: 100%;
+            height: max-content;
+        }
+    }
+
+    .mobile_app {
+        background-color: #EFFEA6;
+        padding: 0 2vw;
+        margin: 0 10vw;
+        margin-bottom: 5vw;
+        border-radius: 1vw;
+
+        .content {
+            display: flex;
+            padding: 2vw 0;
+
+            .left {
+                width:50%;
+
+                h2 {
+                    font-size: 2.65vw;
+                    font-family: 'Visby Bold';
+                    letter-spacing: .2vw;
+                    margin: 0;
+
+                }
+
+                p {
+                    font-size: 1.8vw;
+                    font-family: 'Visby Regular';
+                    letter-spacing: .2vw;
+                }
+
+                .qr_codes {
+                    display: flex;
+                    gap: 2vw;
+                    margin-top: 2vw;
+
+
+                    img {
+                        width: 12vw;
+                        height: max-content;
+                    }
+
+                    h5 {
+                        font-size: 1.5vw;
+                        font-family: 'Visby Regular';
+                        letter-spacing: .2vw;
+                        margin: 0;
+                        justify-content: center;
+                        display: flex;
+                    }
+                }
+            }
+
+            .right {
+                width: 50%;
+
+                img {
+                    width: max-content;
+                    height: 29vw;
+                }
+
+                .apple_play_store {
+                    display: flex;
+                    gap: 2vw;
+                    justify-content: center;
+
+                    img {
+                        width: 12vw;
+                        cursor: pointer;
+                        height: max-content;
+                    }
                 }
             }
         }
