--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -85,3 +85,47 @@
         }
     }
 }
+
+@media screen and (max-width: $mobile) {
+    .contact {
+        margin: 0vw 10vw;
+        padding: 5vw;
+        margin-bottom: 5vw;
+
+        h1 {
+            font-size: 4vw;
+        }
+
+        .formContainer {
+
+            h4 {
+                font-size: 3vw;
+            }
+
+            form {
+                input {
+                    height: 4vw;
+                    font-size: 3vw;
+                    padding: 1vw 2vw;
+                    margin-bottom: 1.5vw;
+
+                    
+                }
+
+                button {
+                    width: 100%;
+                    height: 6vw;
+                    font-size: 3vw;
+                }
+            }
+
+            img {
+                height: 30vw;
+                width: max-content;
+                margin-left: 0vw;
+            }
+        }
+
+        
+    }
+}
