--- a/styles/components/footer.module.scss
+++ b/styles/components/footer.module.scss
@@ -5,6 +5,7 @@
     background-color: $dark;
     color: $light;
     font-size: 1.2vw;
+    font-family: "Visby Regular";
     @include flexContentSpaceBetween;
     padding: 2vw 8vw;
 
@@ -103,4 +104,109 @@
             }
         }
     }
+}
+
+@media screen and (max-width: $mobile) {
+    .footer {
+        background-color: $dark;
+        color: $light;
+        font-size: 1.2vw;
+        font-family: "Visby Regular";
+        @include flexContentSpaceBetween;
+        padding: 2vw 8vw;
+
+        .links {
+            ul {
+                display: grid;
+                grid-template-rows: repeat(5, min-content);
+                grid-auto-flow: column;
+                grid-gap: 2vw;
+                grid-column-gap: 10vw;
+
+                li {
+                    a {
+                        color: $light;
+                        text-decoration: none;
+                        font-size: 2vw;
+                        letter-spacing: 0.1vw;
+                        font-weight: 500;
+                        padding: 0.5vw 1vw;
+                        cursor: pointer;
+                        transition: all 0.5s ease-in-out;
+
+
+                    }
+
+
+                }
+            }
+        }
+
+        .social {
+            // align the alements to the right
+
+
+            .icons {
+                display: grid;
+                grid-auto-flow: column;
+                grid-gap: 2vw;
+                grid-column-gap: 2vw;
+                text-align: right;
+
+                img {
+                    width: 3.5vw;
+                    height: max-content;
+                }
+            }
+
+            .contact {
+                color: $light;
+                font-size: 1.2vw;
+                font-weight: 500;
+                padding: 2vw 0vw;
+                display: grid;
+                grid-row-gap: 2vw;
+                text-align: right;
+
+                p {
+                    margin: 0;
+                    padding: 0;
+                    display: flex;
+                    text-align: right;
+                    justify-content: right;
+                    font-size: 1.5vw;
+                    letter-spacing: 0.1vw;
+
+                }
+
+                a {
+                    color: $light;
+                    text-decoration: none;
+                    font-size: 2vw;
+                    letter-spacing: 0.1vw;
+                    padding: 0.5vw 1vw;
+                    cursor: pointer;
+                    transition: all 0.5s ease-in-out;
+                    margin: 0;
+                    padding: 0;
+
+                    
+                }
+
+                .whatsapp {
+                    display: grid;
+                    justify-content: space-between;
+                    align-items: center;
+                    grid-auto-flow: column;
+                    grid-column-gap: 1vw;
+
+                    img {
+                        width: 2vw;
+                        height: max-content;
+                    }
+                }
+            }
+        }
+    }
+
 }
