--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -891,6 +891,7 @@
                         font-family: 'Visby Regular';
                         font-size: 2.6vw;
                         letter-spacing: 0.25vw;
+                        line-height: 3.5vw;
                         margin: 0;
                     }
 
