--- a/styles/services.module.scss
+++ b/styles/services.module.scss
@@ -1,3 +1,5 @@
+@import "./theme.scss";
+
 .services {
     padding: 10vw 10vw 0 10vw;
 
@@ -15,4 +17,26 @@
         margin-bottom: 2vw;
         width: 33vw;
     }
+}
+
+@media screen and (max-width: $mobile) {
+    .services {
+        padding: 10vw 10vw 0 10vw;
+    
+        h2 {
+            font-size: 4vw;
+            margin: 0;
+            font-family: "Visby bold";
+    
+        }
+    
+        .paragraph {
+            font-size: 2vw;
+            font-family: "Visby regular";
+            line-height: 2.1vw;
+            margin-bottom: 2vw;
+            width: 50vw;
+        }
+    }
+    
 }
